fixed arrowhead on safari

--- a/src/index.css
+++ b/src/index.css
@@ -156,11 +156,7 @@ body {
   /* color: #ff295b;
   -webkit-text-stroke-color: #ff295b; */
   position: relative;
-  top: -2px;
-}
-
-.arrowhead {
-  mix-blend-mode: color-dodge;
+  top: -4.5px;
 }
 
 .shareholder,
